<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/color_two"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:fontFamily="@font/open_sans_bold"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:textColor="@color/white"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@mipmap/app_icon"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="65dp">

        <EditText
            android:id="@+id/email"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:background="@null"
            android:fontFamily="@font/open_sans_regular"
            android:gravity="center"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/color_three"
            android:textColorHint="@color/color_three_9"
            android:textCursorDrawable="@null"
            android:textSize="14sp" />

        <View
            android:layout_width="250dp"
            android:layout_height="1dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:background="@color/white"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="65dp">

        <EditText
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:textCursorDrawable="@null"
            android:gravity="center"
            android:textSize="14sp"
            android:id="@+id/password"
            android:inputType="textPassword"
            android:fontFamily="@font/open_sans_regular"
            android:background="@null"
            android:layout_centerHorizontal="true"
            android:textColor="@color/color_three"
            android:textColorHint="@color/color_three_9"
            android:hint="@string/password"/>

        <View
            android:layout_width="250dp"
            android:layout_height="1dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:background="@color/white"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <com.wang.avi.AVLoadingIndicatorView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/avi"
            android:visibility="gone"
            app:indicatorName="BallClipRotatePulseIndicator"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            app:indicatorColor="@color/color_three"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:background="@color/color_three"
            android:fontFamily="@font/open_sans_regular"
            android:text="@string/login"
            android:textColor="@color/white" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/des_reg"
            android:id="@+id/register"
            android:fontFamily="@font/open_sans_bold"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"/>

    </RelativeLayout>

</LinearLayout>