<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/color_two"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:layout_width="30dp"
            android:id="@+id/back"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/back"
            android:layout_centerVertical="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/profile"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5">

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:src="@drawable/add_img"
            app:civ_border_color="@color/white"
            app:civ_border_width="2dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/open_sans_bold"
            android:hint="@string/name"
            android:textColor="@color/color_three"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:id="@+id/name"
            android:fontFamily="@font/open_sans_regular"
            android:textColor="@color/color_three"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_margin="15dp"
            android:layout_height="2dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:background="@color/white"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/open_sans_bold"
            android:hint="@string/email"
            android:textColor="@color/color_three"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/open_sans_regular"
            android:textColor="@color/color_three"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_margin="15dp"
            android:layout_height="2dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:background="@color/white"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/open_sans_bold"
            android:hint="@string/mobile"
            android:textColor="@color/color_three"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:id="@+id/mobile"
            android:fontFamily="@font/open_sans_regular"
            android:textColor="@color/color_three"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_margin="15dp"
            android:layout_height="2dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:background="@color/white"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/logout"
            android:id="@+id/logout"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textColor="@color/color_three"
            android:textSize="18sp" />

        <com.wang.avi.AVLoadingIndicatorView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/avi"
            app:indicatorName="BallClipRotatePulseIndicator"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            app:indicatorColor="@color/color_three"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5">

    </RelativeLayout>

</LinearLayout>